@@ -16,7 +16,6 @@ import java.lang.reflect.Proxy;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -217,7 +216,7 @@ public abstract class BackupRestoreItem<T> {
                 String concatenatedPasswordTokens = jobParameters.getString(Backup.PARAM_PASSWORD_TOKENS);
                 Map<String, String> passwordTokens = parseConcatenatedPasswordTokens(concatenatedPasswordTokens);
                 this.xp.registerConverter(new TokenizedFieldConverter(passwordTokens));
-                xstream.registerBreifMapComplexType("tokenizedPassword", BackupRestoreItem.class);
+                xstream.registerBriefMapComplexType("tokenizedPassword", BackupRestoreItem.class);
             }
         }
 
@@ -290,7 +289,7 @@ public abstract class BackupRestoreItem<T> {
         }
 
         if (!isBestEffort()) {
-            getCurrentJobExecution().addFailureExceptions(Arrays.asList(validationException));
+            getCurrentJobExecution().addFailureExceptions(List.of(validationException));
         }
         return false;
     }
@@ -300,10 +299,10 @@ public abstract class BackupRestoreItem<T> {
         CatalogException validationException =
                 e != null ? new CatalogException(e) : new CatalogException("Invalid resource: " + resource);
         if (!isBestEffort()) {
-            getCurrentJobExecution().addFailureExceptions(Arrays.asList(validationException));
+            getCurrentJobExecution().addFailureExceptions(List.of(validationException));
             throw validationException;
         } else {
-            getCurrentJobExecution().addWarningExceptions(Arrays.asList(validationException));
+            getCurrentJobExecution().addWarningExceptions(List.of(validationException));
         }
         return false;
     }
@@ -347,15 +346,15 @@ public abstract class BackupRestoreItem<T> {
     }
 
     private MapConverter createParameterizingMapConverter(XStreamPersister xstream) {
-        return xstream.new BreifMapConverter() {
+        return xstream.new BriefMapConverter() {
             @Override
             public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
                 ParameterizedFieldsHolder fieldsToParametrize =
                         (ParameterizedFieldsHolder) context.get(ENCRYPTED_FIELDS_KEY);
 
                 Map map = (Map) source;
-                for (Iterator iterator = map.entrySet().iterator(); iterator.hasNext(); ) {
-                    Map.Entry entry = (Map.Entry) iterator.next();
+                for (Object o : map.entrySet()) {
+                    Map.Entry entry = (Map.Entry) o;
 
                     if (entry.getValue() == null) {
                         continue;
@@ -463,23 +462,23 @@ public abstract class BackupRestoreItem<T> {
 
     /** */
     private ResourceInfo unwrapSecured(ResourceInfo info) {
-        if (info instanceof SecuredFeatureTypeInfo) return ((SecuredFeatureTypeInfo) info).unwrap(ResourceInfo.class);
-        if (info instanceof SecuredCoverageInfo) return ((SecuredCoverageInfo) info).unwrap(ResourceInfo.class);
-        if (info instanceof SecuredWMSLayerInfo) return ((SecuredWMSLayerInfo) info).unwrap(ResourceInfo.class);
-        if (info instanceof SecuredWMTSLayerInfo) return ((SecuredWMTSLayerInfo) info).unwrap(ResourceInfo.class);
+        if (info instanceof SecuredFeatureTypeInfo typeInfo) return typeInfo.unwrap(ResourceInfo.class);
+        if (info instanceof SecuredCoverageInfo coverageInfo) return coverageInfo.unwrap(ResourceInfo.class);
+        if (info instanceof SecuredWMSLayerInfo layerInfo) return layerInfo.unwrap(ResourceInfo.class);
+        if (info instanceof SecuredWMTSLayerInfo layerInfo) return layerInfo.unwrap(ResourceInfo.class);
         return info;
     }
 
     /** */
     private StoreInfo unwrapSecured(StoreInfo info) {
-        if (info instanceof SecuredDataStoreInfo) return ((SecuredDataStoreInfo) info).unwrap(StoreInfo.class);
-        if (info instanceof SecuredWMSLayerInfo) return ((SecuredWMSLayerInfo) info).unwrap(StoreInfo.class);
-        if (info instanceof SecuredWMTSLayerInfo) return ((SecuredWMTSLayerInfo) info).unwrap(StoreInfo.class);
-        if (info instanceof SecuredCoverageStoreInfo) return ((SecuredCoverageStoreInfo) info).unwrap(StoreInfo.class);
+        if (info instanceof SecuredDataStoreInfo storeInfo) return storeInfo.unwrap(StoreInfo.class);
+        if (info instanceof SecuredWMSLayerInfo layerInfo) return layerInfo.unwrap(StoreInfo.class);
+        if (info instanceof SecuredWMTSLayerInfo layerInfo) return layerInfo.unwrap(StoreInfo.class);
+        if (info instanceof SecuredCoverageStoreInfo storeInfo) return storeInfo.unwrap(StoreInfo.class);
         return info;
     }
 
-    /** @param catalog */
+    /** @param srcCatalog */
     protected void syncTo(Catalog srcCatalog) {
         // do a manual import
 
@@ -519,7 +518,7 @@ public abstract class BackupRestoreItem<T> {
         }
         for (ResourceInfo resource : srcCatalog.getFacade().getResources(FeatureTypeInfo.class)) {
             FeatureTypeInfo targetResource = catalog.getResourceByName(resource.getName(), FeatureTypeInfo.class);
-            if (resource != null && targetResource == null) {
+            if (targetResource == null) {
                 DataStoreInfo targetDataStore =
                         catalog.getDataStoreByName(resource.getStore().getName());
                 NamespaceInfo targetNamespace = resource.getNamespace() != null
@@ -537,7 +536,7 @@ public abstract class BackupRestoreItem<T> {
         // WMSStores
         for (StoreInfo store : srcCatalog.getFacade().getStores(WMSStoreInfo.class)) {
             WMSStoreInfo targetWMSStore = catalog.getWMSStoreByName(store.getName());
-            if (store != null && targetWMSStore == null) {
+            if (targetWMSStore == null) {
                 WorkspaceInfo targetWorkspace = store.getWorkspace() != null
                         ? catalog.getWorkspaceByName(store.getWorkspace().getName())
                         : null;
@@ -553,7 +552,7 @@ public abstract class BackupRestoreItem<T> {
         // WMTSStores
         for (StoreInfo store : srcCatalog.getFacade().getStores(WMTSStoreInfo.class)) {
             WMTSStoreInfo targetWMTSStore = catalog.getWMTSStoreByName(store.getName());
-            if (store != null && targetWMTSStore == null) {
+            if (targetWMTSStore == null) {
                 WorkspaceInfo targetWorkspace = store.getWorkspace() != null
                         ? catalog.getWorkspaceByName(store.getWorkspace().getName())
                         : null;
@@ -569,7 +568,7 @@ public abstract class BackupRestoreItem<T> {
         // CoverageStores
         for (StoreInfo store : srcCatalog.getFacade().getStores(CoverageStoreInfo.class)) {
             CoverageStoreInfo targetCoverageStore = catalog.getCoverageStoreByName(store.getName());
-            if (store != null && targetCoverageStore == null) {
+            if (targetCoverageStore == null) {
                 WorkspaceInfo targetWorkspace = store.getWorkspace() != null
                         ? catalog.getWorkspaceByName(store.getWorkspace().getName())
                         : null;
@@ -583,7 +582,7 @@ public abstract class BackupRestoreItem<T> {
         }
         for (ResourceInfo resource : srcCatalog.getFacade().getResources(CoverageInfo.class)) {
             CoverageInfo targetResource = catalog.getResourceByName(resource.getName(), CoverageInfo.class);
-            if (resource != null && targetResource == null) {
+            if (targetResource == null) {
                 CoverageStoreInfo targetCoverageStore =
                         catalog.getCoverageStoreByName(resource.getStore().getName());
                 NamespaceInfo targetNamespace = resource.getNamespace() != null
@@ -601,7 +600,7 @@ public abstract class BackupRestoreItem<T> {
         // Styles
         for (StyleInfo s : srcCatalog.getFacade().getStyles()) {
             StyleInfo targetStyle = catalog.getStyleByName(s.getName());
-            if (s != null && targetStyle == null) {
+            if (targetStyle == null) {
                 WorkspaceInfo targetWorkspace = s.getWorkspace() != null
                         ? catalog.getWorkspaceByName(s.getWorkspace().getName())
                         : null;
@@ -705,37 +704,34 @@ public abstract class BackupRestoreItem<T> {
             target.setDescription(source.getDescription());
             target.setType(source.getType() != null ? source.getType() : "Shapefile");
 
-            if (source instanceof DataStoreInfoImpl) {
+            if (source instanceof DataStoreInfoImpl impl) {
                 ((DataStoreInfoImpl) target).setDefault(((StoreInfoImpl) source).isDefault());
-                ((DataStoreInfoImpl) target)
-                        .setConnectionParameters(((DataStoreInfoImpl) source).getConnectionParameters());
+                ((DataStoreInfoImpl) target).setConnectionParameters(impl.getConnectionParameters());
                 ((DataStoreInfoImpl) target).setMetadata(((StoreInfoImpl) source).getMetadata());
             }
 
-            if (source instanceof CoverageStoreInfoImpl) {
-                ((CoverageStoreInfoImpl) target).setURL(((CoverageStoreInfoImpl) source).getURL());
+            if (source instanceof CoverageStoreInfoImpl impl) {
+                ((CoverageStoreInfoImpl) target).setURL(impl.getURL());
             }
 
-            if (source instanceof WMSStoreInfoImpl) {
-                ((WMSStoreInfoImpl) target).setCapabilitiesURL(((WMSStoreInfoImpl) source).getCapabilitiesURL());
-                ((WMSStoreInfoImpl) target).setUsername(((WMSStoreInfoImpl) source).getUsername());
-                ((WMSStoreInfoImpl) target).setPassword(((WMSStoreInfoImpl) source).getPassword());
-                ((WMSStoreInfoImpl) target).setConnectTimeout(((WMSStoreInfoImpl) source).getConnectTimeout());
-                ((WMSStoreInfoImpl) target).setMaxConnections(((WMSStoreInfoImpl) source).getMaxConnections());
-                ((WMSStoreInfoImpl) target).setReadTimeout(((WMSStoreInfoImpl) source).getReadTimeout());
-                ((WMSStoreInfoImpl) target)
-                        .setUseConnectionPooling(((WMSStoreInfoImpl) source).isUseConnectionPooling());
+            if (source instanceof WMSStoreInfoImpl impl) {
+                ((WMSStoreInfoImpl) target).setCapabilitiesURL(impl.getCapabilitiesURL());
+                ((WMSStoreInfoImpl) target).setUsername(impl.getUsername());
+                ((WMSStoreInfoImpl) target).setPassword(impl.getPassword());
+                ((WMSStoreInfoImpl) target).setConnectTimeout(impl.getConnectTimeout());
+                ((WMSStoreInfoImpl) target).setMaxConnections(impl.getMaxConnections());
+                ((WMSStoreInfoImpl) target).setReadTimeout(impl.getReadTimeout());
+                ((WMSStoreInfoImpl) target).setUseConnectionPooling(impl.isUseConnectionPooling());
             }
 
-            if (source instanceof WMTSStoreInfoImpl) {
-                ((WMTSStoreInfoImpl) target).setCapabilitiesURL(((WMTSStoreInfoImpl) source).getCapabilitiesURL());
-                ((WMTSStoreInfoImpl) target).setUsername(((WMTSStoreInfoImpl) source).getUsername());
-                ((WMTSStoreInfoImpl) target).setPassword(((WMTSStoreInfoImpl) source).getPassword());
-                ((WMTSStoreInfoImpl) target).setConnectTimeout(((WMTSStoreInfoImpl) source).getConnectTimeout());
-                ((WMTSStoreInfoImpl) target).setMaxConnections(((WMTSStoreInfoImpl) source).getMaxConnections());
-                ((WMTSStoreInfoImpl) target).setReadTimeout(((WMTSStoreInfoImpl) source).getReadTimeout());
-                ((WMTSStoreInfoImpl) target)
-                        .setUseConnectionPooling(((WMTSStoreInfoImpl) source).isUseConnectionPooling());
+            if (source instanceof WMTSStoreInfoImpl impl) {
+                ((WMTSStoreInfoImpl) target).setCapabilitiesURL(impl.getCapabilitiesURL());
+                ((WMTSStoreInfoImpl) target).setUsername(impl.getUsername());
+                ((WMTSStoreInfoImpl) target).setPassword(impl.getPassword());
+                ((WMTSStoreInfoImpl) target).setConnectTimeout(impl.getConnectTimeout());
+                ((WMTSStoreInfoImpl) target).setMaxConnections(impl.getMaxConnections());
+                ((WMTSStoreInfoImpl) target).setReadTimeout(impl.getReadTimeout());
+                ((WMTSStoreInfoImpl) target).setUseConnectionPooling(impl.isUseConnectionPooling());
             }
         }
 
@@ -785,14 +781,14 @@ public abstract class BackupRestoreItem<T> {
         target.setSRS(source.getSRS());
         target.setTitle(source.getTitle());
 
-        if (source instanceof FeatureTypeInfoImpl) {
-            ((FeatureTypeInfoImpl) target).setMetadata(((FeatureTypeInfoImpl) source).getMetadata());
-            ((FeatureTypeInfoImpl) target).setMetadataLinks(((FeatureTypeInfoImpl) source).getMetadataLinks());
-            ((FeatureTypeInfoImpl) target).setAlias(((FeatureTypeInfoImpl) source).getAlias());
-            ((FeatureTypeInfoImpl) target).setAttributes(((FeatureTypeInfoImpl) source).getAttributes());
-            ((FeatureTypeInfoImpl) target).setDataLinks(((FeatureTypeInfoImpl) source).getDataLinks());
-            ((FeatureTypeInfoImpl) target).setKeywords(((FeatureTypeInfoImpl) source).getKeywords());
-            ((FeatureTypeInfoImpl) target).setResponseSRS(((FeatureTypeInfoImpl) source).getResponseSRS());
+        if (source instanceof FeatureTypeInfoImpl impl) {
+            ((FeatureTypeInfoImpl) target).setMetadata(impl.getMetadata());
+            ((FeatureTypeInfoImpl) target).setMetadataLinks(impl.getMetadataLinks());
+            ((FeatureTypeInfoImpl) target).setAlias(impl.getAlias());
+            ((FeatureTypeInfoImpl) target).setAttributes(impl.getAttributes());
+            ((FeatureTypeInfoImpl) target).setDataLinks(impl.getDataLinks());
+            ((FeatureTypeInfoImpl) target).setKeywords(impl.getKeywords());
+            ((FeatureTypeInfoImpl) target).setResponseSRS(impl.getResponseSRS());
         }
 
         return target;
@@ -819,17 +815,17 @@ public abstract class BackupRestoreItem<T> {
         target.setSRS(source.getSRS());
         target.setTitle(source.getTitle());
 
-        if (source instanceof CoverageInfoImpl) {
-            ((CoverageInfoImpl) target).setDataLinks(((CoverageInfoImpl) source).getDataLinks());
-            ((CoverageInfoImpl) target).setDimensions(((CoverageInfoImpl) source).getDimensions());
-            ((CoverageInfoImpl) target).setInterpolationMethods(((CoverageInfoImpl) source).getInterpolationMethods());
-            ((CoverageInfoImpl) target).setKeywords(((CoverageInfoImpl) source).getKeywords());
-            ((CoverageInfoImpl) target).setMetadata(((CoverageInfoImpl) source).getMetadata());
-            ((CoverageInfoImpl) target).setMetadataLinks(((CoverageInfoImpl) source).getMetadataLinks());
-            ((CoverageInfoImpl) target).setParameters(((CoverageInfoImpl) source).getParameters());
-            ((CoverageInfoImpl) target).setRequestSRS(((CoverageInfoImpl) source).getRequestSRS());
-            ((CoverageInfoImpl) target).setResponseSRS(((CoverageInfoImpl) source).getResponseSRS());
-            ((CoverageInfoImpl) target).setSupportedFormats(((CoverageInfoImpl) source).getSupportedFormats());
+        if (source instanceof CoverageInfoImpl impl) {
+            ((CoverageInfoImpl) target).setDataLinks(impl.getDataLinks());
+            ((CoverageInfoImpl) target).setDimensions(impl.getDimensions());
+            ((CoverageInfoImpl) target).setInterpolationMethods(impl.getInterpolationMethods());
+            ((CoverageInfoImpl) target).setKeywords(impl.getKeywords());
+            ((CoverageInfoImpl) target).setMetadata(impl.getMetadata());
+            ((CoverageInfoImpl) target).setMetadataLinks(impl.getMetadataLinks());
+            ((CoverageInfoImpl) target).setParameters(impl.getParameters());
+            ((CoverageInfoImpl) target).setRequestSRS(impl.getRequestSRS());
+            ((CoverageInfoImpl) target).setResponseSRS(impl.getResponseSRS());
+            ((CoverageInfoImpl) target).setSupportedFormats(impl.getSupportedFormats());
         }
 
         return target;
@@ -864,11 +860,11 @@ public abstract class BackupRestoreItem<T> {
         target.setTitle(source.getTitle());
         target.setType(source.getType());
 
-        if (source instanceof LayerInfoImpl) {
-            ((LayerInfoImpl) target).setAuthorityURLs(((LayerInfoImpl) source).getAuthorityURLs());
-            ((LayerInfoImpl) target).setIdentifiers(((LayerInfoImpl) source).getIdentifiers());
-            ((LayerInfoImpl) target).setMetadata(((LayerInfoImpl) source).getMetadata());
-            ((LayerInfoImpl) target).setStyles(((LayerInfoImpl) source).getStyles());
+        if (source instanceof LayerInfoImpl impl) {
+            ((LayerInfoImpl) target).setAuthorityURLs(impl.getAuthorityURLs());
+            ((LayerInfoImpl) target).setIdentifiers(impl.getIdentifiers());
+            ((LayerInfoImpl) target).setMetadata(impl.getMetadata());
+            ((LayerInfoImpl) target).setStyles(impl.getStyles());
         }
 
         return target;
