@@ -4,13 +4,14 @@
  */
 package org.geoserver.ogcapi.v1.dggs;
 
-import static org.geoserver.ogcapi.MappingJackson2YAMLMessageConverter.APPLICATION_YAML_VALUE;
-import static org.geoserver.ogcapi.OpenAPIMessageConverter.OPEN_API_MEDIA_TYPE_VALUE;
+import static org.geoserver.ogcapi.SwaggerJSONAPIMessageConverter.OPEN_API_MEDIA_TYPE_VALUE;
 import static org.geoserver.ows.util.ResponseUtils.buildURL;
 import static org.geotools.dggs.gstore.DGGSStore.RESOLUTION;
+import static org.springframework.http.MediaType.APPLICATION_YAML_VALUE;
 
 import io.swagger.v3.oas.models.OpenAPI;
 import java.io.IOException;
+import java.io.Serializable;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -51,19 +52,25 @@ import org.geoserver.wfs.request.FeatureCollectionResponse;
 import org.geoserver.wfs.request.GetFeatureRequest;
 import org.geoserver.wfs.request.Query;
 import org.geoserver.wms.WMS;
+import org.geotools.api.data.DataAccess;
+import org.geotools.api.feature.Feature;
 import org.geotools.api.feature.simple.SimpleFeatureType;
 import org.geotools.api.feature.type.AttributeDescriptor;
+import org.geotools.api.feature.type.FeatureType;
 import org.geotools.api.filter.Filter;
 import org.geotools.api.filter.FilterFactory;
 import org.geotools.api.filter.PropertyIsEqualTo;
 import org.geotools.dggs.DGGSInstance;
 import org.geotools.dggs.Zone;
+import org.geotools.dggs.datastore.DGGSStoreFactory;
+import org.geotools.dggs.gstore.DGGSFeatureSource;
 import org.geotools.dggs.gstore.DGGSStore;
 import org.geotools.factory.CommonFactoryFinder;
 import org.geotools.referencing.crs.DefaultGeographicCRS;
 import org.geotools.util.logging.Logging;
 import org.geotools.xsd.EMFUtils;
 import org.locationtech.jts.geom.Coordinate;
+import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.Point;
 import org.locationtech.jts.geom.Polygon;
@@ -131,7 +138,7 @@ public class DGGSService {
     @ResponseBody
     @HTMLResponseBody(templateName = "conformance.ftl", fileName = "conformance.html")
     public ConformanceDocument conformance() {
-        List<String> classes = Arrays.asList(CORE);
+        List<String> classes = List.of(CORE);
         return new ConformanceDocument(DISPLAY_NAME, classes);
     }
 
@@ -157,9 +164,7 @@ public class DGGSService {
     @HTMLResponseBody(templateName = "collection.ftl", fileName = "collection.html")
     public CollectionDocument collection(@PathVariable(name = "collectionId") String collectionId) throws IOException {
         FeatureTypeInfo ft = getFeatureType(collectionId);
-        CollectionDocument collection = new CollectionDocument(gs, ft);
-
-        return collection;
+        return new CollectionDocument(gs, ft);
     }
 
     /** Returns the feature type for the specified collection, checking it's a valid DGGS collection */
@@ -179,6 +184,25 @@ public class DGGSService {
         return featureType;
     }
 
+    protected String getZoneColumnName(String collectionId) throws IOException {
+        AttributeDescriptor descriptor = getZoneColumnDescriptor(collectionId);
+        if (descriptor == null) {
+            throw new ServiceException(
+                    "Collection " + collectionId + " does not expose a zone id attribute",
+                    ServiceException.INVALID_PARAMETER_VALUE,
+                    "collectionId");
+        }
+        return descriptor.getLocalName();
+    }
+
+    protected AttributeDescriptor getZoneColumnDescriptor(String collectionId) throws IOException {
+        FeatureTypeInfo featureType = getFeatureType(collectionId);
+        // At this point we know it's a DGGS store
+        DGGSStore<?> dggsStore = (DGGSStore<?>) featureType.getStore().getDataStore(null);
+        DGGSFeatureSource<?> source = dggsStore.getDGGSFeatureSource(featureType.getNativeName());
+        return source.getZoneIdAttribute();
+    }
+
     /**
      * Returns true if the feature type is associated to a DGGSStore
      *
@@ -187,7 +211,12 @@ public class DGGSService {
      */
     public static boolean isDGGSType(FeatureTypeInfo featureType) {
         try {
-            return featureType.getStore().getDataStore(null) instanceof DGGSStore;
+            DataAccess<? extends FeatureType, ? extends Feature> datastore =
+                    featureType.getStore().getDataStore(null);
+            if (LOGGER.isLoggable(Level.FINER)) {
+                LOGGER.finer("Datastore for " + featureType + " is " + datastore);
+            }
+            return datastore instanceof DGGSStore;
         } catch (Exception e) {
             // stores that are not working are rather common, log at finer level
             LOGGER.log(Level.FINER, "Failed to grab store for " + featureType);
@@ -211,11 +240,15 @@ public class DGGSService {
             @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
         // handle possible geometry filters
-        DGGSGeometryFilterParser geometryParser = new DGGSGeometryFilterParser(FF, getDGGSInstance(collectionId));
+        AttributeDescriptor zoneId = getZoneColumnDescriptor(collectionId);
+        DGGSGeometryFilterParser geometryParser =
+                new DGGSGeometryFilterParser(FF, getDGGSInstance(collectionId), Geometry.class, zoneId);
         geometryParser.setBBOX(bbox);
         geometryParser.setGeometry(wkt);
         geometryParser.setZoneIds(zones, resolution);
 
+        FeatureTypeInfo ft = getFeatureType(collectionId);
+        Integer imposedResolution = getImposedResolution(ft);
         // build the request in a way core WFS machinery can understand it
         return runGetFeature(
                 collectionId,
@@ -226,19 +259,39 @@ public class DGGSService {
                 format,
                 request -> {
                     // add the resolution hint
-                    if (resolution != null) {
+                    if (imposedResolution != null) {
+                        boolean sameRes = imposedResolution.equals(resolution);
+                        if (!sameRes) {
+                            LOGGER.warning("The underlying datastore has a fixed resolution of "
+                                    + imposedResolution
+                                    + ", excluding the requested resolution of "
+                                    + resolution);
+                        }
+                        Filter resolutionFilter = sameRes ? Filter.INCLUDE : Filter.EXCLUDE;
+                        mixFilter(request, resolutionFilter);
+                    } else {
                         request.setViewParams(Collections.singletonList(
                                 Collections.singletonMap(DGGSStore.VP_RESOLUTION, String.valueOf(resolution))));
                         Filter resolutionFilter = FF.equals(FF.property(RESOLUTION), FF.literal(resolution));
                         mixFilter(request, resolutionFilter);
-
-                        Filter geometryFilter = geometryParser.getFilter();
-                        if (geometryFilter != null && geometryFilter != Filter.INCLUDE) {
-                            mixFilter(request, geometryFilter);
-                        }
+                    }
+                    Filter geometryFilter = geometryParser.getFilter();
+                    if (geometryFilter != null && geometryFilter != Filter.INCLUDE) {
+                        mixFilter(request, geometryFilter);
                     }
                 },
-                collectionName -> "ogc/dggs/collections/" + ResponseUtils.urlEncode(collectionName) + "/zones");
+                collectionName -> "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionName) + "/zones");
+    }
+
+    private static Integer getImposedResolution(FeatureTypeInfo ft) {
+        Map<String, Serializable> connectionParams = ft.getStore().getConnectionParameters();
+        Object fixedResolution;
+        Integer imposedResolution = null;
+        if (connectionParams.containsKey(DGGSStoreFactory.RESOLUTION.key)
+                && ((fixedResolution = connectionParams.get(DGGSStoreFactory.RESOLUTION.key)) != null)) {
+            imposedResolution = Integer.parseInt(fixedResolution.toString());
+        }
+        return imposedResolution;
     }
 
     void mixFilter(GetFeatureRequest request, Filter mix) {
@@ -268,6 +321,7 @@ public class DGGSService {
     @GetMapping(path = "collections/{collectionId}/neighbors", name = "getNeighbors")
     @ResponseBody
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
+    @SuppressWarnings("PMD.CloseResource") // managed by the store
     public FeaturesResponse neighbors(
             @PathVariable(name = "collectionId") String collectionId,
             @RequestParam(name = "zone_id") String zoneId,
@@ -290,8 +344,15 @@ public class DGGSService {
                     "Neighboring distance exceeds maximum value: " + maxNeighborDistance,
                     HttpStatus.BAD_REQUEST);
         }
+        AttributeDescriptor zoneDescriptor = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneDescriptor.getLocalName();
+        DGGSInstance<?> dggs = getDGGSInstance(collectionId);
         PropertyIsEqualTo neighborFilter = FF.equals(
-                FF.function("neighbor", FF.property("zoneId"), FF.literal(zoneId), FF.literal(distance)),
+                FF.function(
+                        "neighbor",
+                        FF.property(zoneIdColumn),
+                        dggs.getZoneLiteral(zoneDescriptor, zoneId),
+                        FF.literal(distance)),
                 FF.literal(true));
         return runGetFeature(
                 collectionId,
@@ -303,13 +364,14 @@ public class DGGSService {
                 request -> {
                     mixFilter(request, neighborFilter);
                 },
-                collectionName -> "ogc/dggs/collections/" + ResponseUtils.urlEncode(collectionName) + "/neighbors");
+                collectionName -> "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionName) + "/neighbors");
     }
 
     @GetMapping(path = "collections/{collectionId}/zone", name = "getZone")
     @ResponseBody
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
     @HTMLResponseBody(templateName = "zone.ftl", fileName = "zone.html")
+    @SuppressWarnings("PMD.CloseResource") // managed by the store
     public FeaturesResponse zone(
             @PathVariable(name = "collectionId") String collectionId,
             @RequestParam(name = "zone_id") String zoneId,
@@ -317,6 +379,9 @@ public class DGGSService {
             @RequestParam(name = "properties", required = false) String properties,
             @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
+        AttributeDescriptor zoneDescriptor = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneDescriptor.getLocalName();
+        DGGSInstance<?> dggs = getDGGSInstance(collectionId);
         FeaturesResponse response = runGetFeature(
                 collectionId,
                 datetime,
@@ -325,9 +390,10 @@ public class DGGSService {
                 null,
                 format,
                 request -> {
-                    mixFilter(request, FF.equals(FF.property("zoneId"), FF.literal(zoneId)));
+                    mixFilter(
+                            request, FF.equals(FF.property(zoneIdColumn), dggs.getZoneLiteral(zoneDescriptor, zoneId)));
                 },
-                collectionName -> "ogc/dggs/collections/"
+                collectionName -> "ogc/dggs/v1/collections/"
                         + ResponseUtils.urlEncode(collectionName)
                         + "/zones/"
                         + ResponseUtils.urlEncode(zoneId));
@@ -346,7 +412,7 @@ public class DGGSService {
         reflectDatetime(params);
         String url = buildURL(
                 APIRequestInfo.get().getBaseURL(),
-                "ogc/dggs/collections/" + ResponseUtils.urlEncode(collectionId) + "/parents",
+                "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionId) + "/parents",
                 params,
                 URLMangler.URLType.SERVICE);
         Link link = new Link(url, "parents", "text/html", "Zone parents");
@@ -369,10 +435,11 @@ public class DGGSService {
         reflectDatetime(params);
         params.put(
                 "resolution",
-                String.valueOf(getDGGSInstance(collectionId).getZone(zoneId).getResolution() + 1));
+                String.valueOf(
+                        getDGGSInstance(collectionId).getZoneFromString(zoneId).getResolution() + 1));
         String url = buildURL(
                 APIRequestInfo.get().getBaseURL(),
-                "ogc/dggs/collections/" + ResponseUtils.urlEncode(collectionId) + "/children",
+                "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionId) + "/children",
                 params,
                 URLMangler.URLType.SERVICE);
         Link link = new Link(url, "children", "text/html", "Zone immediate children");
@@ -388,7 +455,7 @@ public class DGGSService {
         reflectDatetime(params);
         String url = buildURL(
                 APIRequestInfo.get().getBaseURL(),
-                "ogc/dggs/collections/" + ResponseUtils.urlEncode(collectionId) + "/neighbors",
+                "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionId) + "/neighbors",
                 params,
                 URLMangler.URLType.SERVICE);
         Link link = new Link(url, "neighbors", "text/html", "Zone immediate neighbors");
@@ -396,27 +463,35 @@ public class DGGSService {
         return link;
     }
 
-    DGGSInstance getDGGSInstance(String collectionId) throws IOException {
+    DGGSInstance<?> getDGGSInstance(String collectionId) throws IOException {
         FeatureTypeInfo featureType = getFeatureType(collectionId);
-        DGGSStore dggsStore = (DGGSStore) featureType.getStore().getDataStore(null);
+        DGGSStore<?> dggsStore = (DGGSStore<?>) featureType.getStore().getDataStore(null);
         return dggsStore.getDGGSFeatureSource(featureType.getNativeName()).getDGGS();
     }
 
     @GetMapping(path = "collections/{collectionId}/children", name = "getChildren")
     @ResponseBody
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
+    @SuppressWarnings("PMD.CloseResource") // managed by the store
     public FeaturesResponse children(
             @PathVariable(name = "collectionId") String collectionId,
             @RequestParam(name = "zone_id") String zoneId,
             @RequestParam(name = "properties", required = false) String properties,
             @RequestParam(name = "startIndex", required = false, defaultValue = "0") BigInteger startIndex,
             @RequestParam(name = "limit", required = false) BigInteger limit,
-            @RequestParam(name = "resolution", required = false) Integer resolution,
+            @RequestParam(name = "resolution") Integer resolution,
             @RequestParam(name = "datetime", required = false) DateTimeList datetime,
             @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
+        AttributeDescriptor zoneDescriptor = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneDescriptor.getLocalName();
+        DGGSInstance<?> dggs = getDGGSInstance(collectionId);
         PropertyIsEqualTo childFilter = FF.equals(
-                FF.function("children", FF.property("zoneId"), FF.literal(zoneId), FF.literal(resolution)),
+                FF.function(
+                        "children",
+                        FF.property(zoneIdColumn),
+                        dggs.getZoneLiteral(zoneDescriptor, zoneId),
+                        FF.literal(resolution)),
                 FF.literal(true));
         return runGetFeature(
                 collectionId,
@@ -428,12 +503,13 @@ public class DGGSService {
                 request -> {
                     mixFilter(request, childFilter);
                 },
-                collectionName -> "ogc/dggs/collections/" + ResponseUtils.urlEncode(collectionName) + "/children");
+                collectionName -> "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionName) + "/children");
     }
 
     @GetMapping(path = "collections/{collectionId}/parents", name = "getParents")
     @ResponseBody
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
+    @SuppressWarnings("PMD.CloseResource") // managed by the store
     public FeaturesResponse parents(
             @PathVariable(name = "collectionId") String collectionId,
             @RequestParam(name = "zone_id") String zoneId,
@@ -443,8 +519,12 @@ public class DGGSService {
             @RequestParam(name = "limit", required = false) BigInteger limit,
             @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
-        PropertyIsEqualTo parentFilter =
-                FF.equals(FF.function("parents", FF.property("zoneId"), FF.literal(zoneId)), FF.literal(true));
+        AttributeDescriptor zoneDescriptor = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneDescriptor.getLocalName();
+        DGGSInstance<?> dggs = getDGGSInstance(collectionId);
+        PropertyIsEqualTo parentFilter = FF.equals(
+                FF.function("parents", FF.property(zoneIdColumn), dggs.getZoneLiteral(zoneDescriptor, zoneId)),
+                FF.literal(true));
         // another filter to help implementation that cannot optimize out the above call
         return runGetFeature(
                 collectionId,
@@ -456,7 +536,7 @@ public class DGGSService {
                 request -> {
                     mixFilter(request, parentFilter);
                 },
-                collectionName -> "ogc/dggs/collections/" + ResponseUtils.urlEncode(collectionName) + "/parents");
+                collectionName -> "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionName) + "/parents");
     }
 
     public FeaturesResponse runGetFeature(
@@ -521,6 +601,7 @@ public class DGGSService {
     @ResponseBody
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
     @HTMLResponseBody(templateName = "zone.ftl", fileName = "zone.html")
+    @SuppressWarnings("PMD.CloseResource") // managed by the store
     public FeaturesResponse point(
             @PathVariable(name = "collectionId") String collectionId,
             @RequestParam(name = "point") String pointSpec,
@@ -530,8 +611,9 @@ public class DGGSService {
             @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
         Point point = getPoint(pointSpec);
-        @SuppressWarnings("PMD.CloseResource") // managed by the store
-        DGGSInstance dggs = getDGGSInstance(collectionId);
+        AttributeDescriptor zoneDescriptor = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneDescriptor.getLocalName();
+        DGGSInstance<?> dggs = getDGGSInstance(collectionId);
         Zone zone = dggs.point(point, resolution);
         String zoneId = zone.getId();
         // we have the zoneId, now to and access the data for it
@@ -543,9 +625,10 @@ public class DGGSService {
                 null,
                 format,
                 request -> {
-                    mixFilter(request, FF.equals(FF.property("zoneId"), FF.literal(zone.getId())));
+                    mixFilter(
+                            request, FF.equals(FF.property(zoneIdColumn), dggs.getZoneLiteral(zoneDescriptor, zoneId)));
                 },
-                collectionName -> "ogc/dggs/collections/"
+                collectionName -> "ogc/dggs/v1/collections/"
                         + ResponseUtils.urlEncode(collectionName)
                         + "/zones/"
                         + ResponseUtils.urlEncode(zoneId));
@@ -572,12 +655,14 @@ public class DGGSService {
             @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
         Polygon polygon = getPolygon(polygonWKT);
+        AttributeDescriptor zoneAttribute = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneAttribute.getLocalName();
         // Filter resolutionFilter = FF.lessOrEqual(FF.property(RESOLUTION),
         // FF.literal(resolution));
         PropertyIsEqualTo polygonFilter = FF.equals(
                 FF.function(
                         "dggsPolygon",
-                        FF.property("zoneId"),
+                        FF.property(zoneIdColumn),
                         FF.literal(polygon),
                         FF.literal(resolution),
                         FF.literal(compact)),
@@ -594,7 +679,7 @@ public class DGGSService {
                     Query query = request.getQueries().get(0);
                     query.setFilter(polygonFilter);
                 },
-                collectionName -> "ogc/dggs/collections/" + ResponseUtils.urlEncode(collectionName) + "/polygon/");
+                collectionName -> "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionName) + "/polygon/");
 
         return response;
     }
