@@ -22,9 +22,14 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 import net.minidev.json.JSONArray;
+import org.geoserver.config.GeoServer;
 import org.geoserver.config.GeoServerInfo;
 import org.geoserver.data.test.SystemTestData;
 import org.geoserver.ogcapi.OGCAPIMediaTypes;
+import org.geoserver.opensearch.eo.OSEOInfo;
+import org.geoserver.opensearch.eo.security.EOCollectionAccessLimitInfo;
+import org.geoserver.opensearch.eo.security.EOCollectionAccessLimitInfoImpl;
+import org.geoserver.platform.ServiceException;
 import org.geotools.api.filter.Filter;
 import org.geotools.api.filter.expression.Literal;
 import org.geotools.filter.IsGreaterThanImpl;
@@ -48,6 +53,9 @@ public class SearchTest extends STACTestSupport {
         copyTemplate("/box.json");
         copyTemplate("/parentLink.json");
         copyTemplate("/items-SENTINEL2.json");
+        // just to poison a bit the custom template management, checking it's tolerant to leftover templates
+        // for collections that were in use, and then got removed
+        copyTemplate("/items-SENTINEL2.json", "templates/ogc/stac/v1/", "/items-notThere.json");
     }
 
     @Test
@@ -58,9 +66,38 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testCollectionsGetInvalidName() throws Exception {
+        // two collections, one invalid
+        DocumentContext doc = getAsJSONPath("ogc/stac/v1/search?collections=SAS1,IAmNotThere", 400);
+        checkOGCAPIException(doc, ServiceException.INVALID_PARAMETER_VALUE, "Collection not found: IAmNotThere");
+    }
+
+    @Test
+    public void testCollectionsPostInvalidName() throws Exception {
+        // two collections, one invalid
+        String request =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "IAmNotThere"
+                  ]
+                }""";
+        DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 400);
+        checkOGCAPIException(doc, ServiceException.INVALID_PARAMETER_VALUE, "Collection not found: IAmNotThere");
+    }
+
+    @Test
     public void testCollectionsPost() throws Exception {
         // two SAS1, one Landsat
-        String request = "{\n" + "  \"collections\": [\n" + "    \"SAS1\",\n" + "    \"LANDSAT8\"\n" + "  ]\n" + "}";
+        String request =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ]
+                }""";
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
         checkCollections(doc, true);
     }
@@ -112,20 +149,23 @@ public class SearchTest extends STACTestSupport {
                 "ogc/stac/v1/search?collections=SENTINEL2,LANDSAT8"
                         + "&filter=constellation='landsat8'&filter-lang=cql2-text",
                 200);
-        assertEquals(new Integer(2), doc.read("numberMatched", Integer.class));
+        assertEquals(Integer.valueOf(2), doc.read("numberMatched", Integer.class));
     }
 
     @Test
     public void testCollectionsCqlPost() throws Exception {
         // two SAS1, one Landsat, but the filter matches constellation to landsat8 only
-        String request = "{\n"
-                + "  \"collections\": [\n"
-                + "    \"SAS1\",\n"
-                + "    \"LANDSAT8\"\n"
-                + "  ],\n"
-                + "  \"filter\": \"constellation='landsat8'\",\n"
-                + "  \"filter-lang\": \"cql-text\"\n"
-                + "}";
+        String request =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ],
+                  "filter": "constellation='landsat8'",
+                  "filter-lang": "cql-text"
+                }\
+                """;
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
         checkCollectionsSinglePage(doc, 2, containsInAnyOrder("LANDSAT8", "LANDSAT8"));
     }
@@ -133,14 +173,17 @@ public class SearchTest extends STACTestSupport {
     @Test
     public void testCollectionsCql2TextPost() throws Exception {
         // two SAS1, one Landsat, but the filter matches constellation to landsat8 only
-        String request = "{\n"
-                + "  \"collections\": [\n"
-                + "    \"SAS1\",\n"
-                + "    \"LANDSAT8\"\n"
-                + "  ],\n"
-                + "  \"filter\": \"constellation='landsat8'\",\n"
-                + "  \"filter-lang\": \"cql2-text\"\n"
-                + "}";
+        String request =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ],
+                  "filter": "constellation='landsat8'",
+                  "filter-lang": "cql2-text"
+                }\
+                """;
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
         checkCollectionsSinglePage(doc, 2, containsInAnyOrder("LANDSAT8", "LANDSAT8"));
     }
@@ -148,23 +191,29 @@ public class SearchTest extends STACTestSupport {
     @Test
     public void testCollectionsPostSort() throws Exception {
         // two SAS1, two Landsat, sorted in descending order
-        String request = "{\n"
-                + "  \"collections\": [\n"
-                + "    \"SAS1\",\n"
-                + "    \"LANDSAT8\"\n"
-                + "  ],\n"
-                + "  \"sortby\": [{\"field\":\"constellation\",\"direction\":\"desc\"}]\n"
-                + "}";
+        String request =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ],
+                  "sortby": [{"field":"constellation","direction":"desc"}]
+                }\
+                """;
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
         checkCollectionsSinglePage(doc, 4, contains("SAS1", "SAS1", "LANDSAT8", "LANDSAT8"));
         // the two landsat8 should be first
-        String request2 = "{\n"
-                + "  \"collections\": [\n"
-                + "    \"SAS1\",\n"
-                + "    \"LANDSAT8\"\n"
-                + "  ],\n"
-                + "  \"sortby\": [{\"field\":\"constellation\",\"direction\":\"asc\"}]\n"
-                + "}";
+        String request2 =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ],
+                  "sortby": [{"field":"constellation","direction":"asc"}]
+                }\
+                """;
         DocumentContext doc2 = postAsJSONPath("ogc/stac/v1/search", request2, 200);
         checkCollectionsSinglePage(doc2, 4, contains("LANDSAT8", "LANDSAT8", "SAS1", "SAS1"));
     }
@@ -172,23 +221,29 @@ public class SearchTest extends STACTestSupport {
     @Test
     public void testCollectionsPostSortPrefixed() throws Exception {
         // two SAS1, two Landsat, sorted in descending order
-        String request = "{\n"
-                + "  \"collections\": [\n"
-                + "    \"SAS1\",\n"
-                + "    \"LANDSAT8\"\n"
-                + "  ],\n"
-                + "  \"sortby\": [{\"field\":\"properties.constellation\",\"direction\":\"desc\"}]\n"
-                + "}";
+        String request =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ],
+                  "sortby": [{"field":"properties.constellation","direction":"desc"}]
+                }\
+                """;
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
         checkCollectionsSinglePage(doc, 4, contains("SAS1", "SAS1", "LANDSAT8", "LANDSAT8"));
         // the two landsat8 should be first
-        String request2 = "{\n"
-                + "  \"collections\": [\n"
-                + "    \"SAS1\",\n"
-                + "    \"LANDSAT8\"\n"
-                + "  ],\n"
-                + "  \"sortby\": [{\"field\":\"properties.constellation\",\"direction\":\"asc\"}]\n"
-                + "}";
+        String request2 =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ],
+                  "sortby": [{"field":"properties.constellation","direction":"asc"}]
+                }\
+                """;
         DocumentContext doc2 = postAsJSONPath("ogc/stac/v1/search", request2, 200);
         checkCollectionsSinglePage(doc2, 4, contains("LANDSAT8", "LANDSAT8", "SAS1", "SAS1"));
     }
@@ -196,14 +251,17 @@ public class SearchTest extends STACTestSupport {
     @Test
     public void testCollectionsCql2JsonPost() throws Exception {
         // two SAS1, one Landsat, but the filter matches constellation to landsat8 only
-        String request = "{\n"
-                + "  \"collections\": [\n"
-                + "    \"SAS1\",\n"
-                + "    \"LANDSAT8\"\n"
-                + "  ],\n"
-                + "  \"filter\":{\"op\":\"=\",\"args\":[{\"property\":\"constellation\"},\"landsat8\"]},\n"
-                + "  \"filter-lang\": \"cql2-json\"\n"
-                + "}";
+        String request =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ],
+                  "filter":{"op":"=","args":[{"property":"constellation"},"landsat8"]},
+                  "filter-lang": "cql2-json"
+                }\
+                """;
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
         checkCollectionsSinglePage(doc, 2, containsInAnyOrder("LANDSAT8", "LANDSAT8"));
     }
@@ -237,7 +295,16 @@ public class SearchTest extends STACTestSupport {
     public void testBBOXFilterPost() throws Exception {
         // two sentinel, one landsat, one sas
         String request =
-                "{\n" + "  \"bbox\": [\n" + "    16,\n" + "    42,\n" + "    17,\n" + "    43\n" + "  ]\n" + "}";
+                """
+                {
+                  "bbox": [
+                    16,
+                    42,
+                    17,
+                    43
+                  ]
+                }\
+                """;
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
 
         checkCollectionsItemsSinglePage(
@@ -278,7 +345,7 @@ public class SearchTest extends STACTestSupport {
             Matcher<Iterable<? extends String>> collectionsMatcher,
             Matcher<Iterable<? extends String>> itemsMatcher) {
         checkCollectionsSinglePage(doc, matched, collectionsMatcher);
-        assertThat((List<String>) doc.read("features[*].id"), itemsMatcher);
+        assertThat(doc.read("features[*].id"), itemsMatcher);
     }
 
     @Test
@@ -303,21 +370,24 @@ public class SearchTest extends STACTestSupport {
         assertEquals(Integer.valueOf(24), doc.read("numberMatched"));
         assertEquals(Integer.valueOf(24), doc.read("numberReturned"));
         assertThat(doc.read("features[*].collection"), not(hasItem("DISABLED_COLLECTION")));
-        assertThat((List<String>) doc.read("features[*].id"), not(hasItem("PRODUCT.IN.DISABLED.COLLECTION")));
+        assertThat(doc.read("features[*].id"), not(hasItem("PRODUCT.IN.DISABLED.COLLECTION")));
     }
 
     @Test
     public void testGeometryIntersectionPost() throws Exception {
         // only SAS and LANDSAT intersecting this point
-        String request = "{\n"
-                + "  \"intersects\": {\n"
-                + "    \"type\": \"Point\",\n"
-                + "    \"coordinates\": [\n"
-                + "      16.5,\n"
-                + "      42.5\n"
-                + "    ]\n"
-                + "  }\n"
-                + "}";
+        String request =
+                """
+                {
+                  "intersects": {
+                    "type": "Point",
+                    "coordinates": [
+                      16.5,
+                      42.5
+                    ]
+                  }
+                }\
+                """;
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
 
         checkCollectionsItemsSinglePage(
@@ -328,11 +398,21 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksFirstSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksFirst(null);
+    }
+
+    @Test
     public void testPagingLinksFirst() throws Exception {
+        checkPagingLinksFirst(4);
+    }
+
+    private void checkPagingLinksFirst(Integer expectedNumberMatched) throws Exception {
         String requestPath = "ogc/stac/v1/search?collections=SAS1%2CLANDSAT8"
                 + "&filter=eo%3Acloud_cover%3D0&filter-lang=cql-text&limit=1";
         DocumentContext doc = getAsJSONPath(requestPath, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // two links expected, self and next
@@ -352,11 +432,21 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksSecondSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksSecond(null);
+    }
+
+    @Test
     public void testPagingLinksSecond() throws Exception {
+        checkPagingLinksSecond(4);
+    }
+
+    private void checkPagingLinksSecond(Integer expectedNumberMatched) throws Exception {
         String requestPath = "ogc/stac/v1/search?collections=SAS1%2CLANDSAT8"
                 + "&filter=eo%3Acloud_cover%3D0&filter-lang=cql-text&limit=1&startIndex=1";
         DocumentContext doc = getAsJSONPath(requestPath, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // three links expected, prev, self and next
@@ -383,11 +473,21 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksLastSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksLast(null);
+    }
+
+    @Test
     public void testPagingLinksLast() throws Exception {
+        checkPagingLinksPostSecond(4);
+    }
+
+    private void checkPagingLinksLast(Integer expectedNumberMatched) throws Exception {
         String requestPath = "ogc/stac/v1/search?collections=SAS1%2CLANDSAT8"
                 + "&filter=eo%3Acloud_cover%3D0&filter-lang=cql-text&limit=1&startIndex=2";
         DocumentContext doc = getAsJSONPath(requestPath, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // two links expected, prev, self
@@ -407,18 +507,31 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksPostFirstSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksPostFirst(null);
+    }
+
+    @Test
     public void testPagingLinksPostFirst() throws Exception {
-        String request = "{\n"
-                + "  \"collections\": [\n"
-                + "    \"SAS1\",\n"
-                + "    \"LANDSAT8\"\n"
-                + "  ],\n"
-                + "  \"filter\": \"eo:cloud_cover=0\",\n"
-                + "  \"filter-lang\": \"cql-text\",\n"
-                + "  \"limit\": 1\n"
-                + "}";
+        checkPagingLinksPostFirst(4);
+    }
+
+    private void checkPagingLinksPostFirst(Integer expectedNumberMatched) throws Exception {
+        String request =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ],
+                  "filter": "eo:cloud_cover=0",
+                  "filter-lang": "cql-text",
+                  "limit": 1
+                }\
+                """;
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // two links expected, self and next
@@ -441,19 +554,32 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksPostSecondSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksPostSecond(null);
+    }
+
+    @Test
     public void testPagingLinksPostSecond() throws Exception {
-        String request = "{\n"
-                + "  \"collections\": [\n"
-                + "    \"SAS1\",\n"
-                + "    \"LANDSAT8\"\n"
-                + "  ],\n"
-                + "  \"filter\": \"eo:cloud_cover=0\",\n"
-                + "  \"filter-lang\": \"cql-text\",\n"
-                + "  \"limit\": 1,\n"
-                + "  \"startIndex\": 1\n"
-                + "}";
+        checkPagingLinksPostSecond(4);
+    }
+
+    private void checkPagingLinksPostSecond(Integer expectedNumberMatched) throws Exception {
+        String request =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ],
+                  "filter": "eo:cloud_cover=0",
+                  "filter-lang": "cql-text",
+                  "limit": 1,
+                  "startIndex": 1
+                }\
+                """;
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // three links expected, prev, self and next
@@ -484,19 +610,32 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksPostLastSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksPostLast(null);
+    }
+
+    @Test
     public void testPagingLinksPostLast() throws Exception {
-        String request = "{\n"
-                + "  \"collections\": [\n"
-                + "    \"SAS1\",\n"
-                + "    \"LANDSAT8\"\n"
-                + "  ],\n"
-                + "  \"filter\": \"eo:cloud_cover=0\",\n"
-                + "  \"filter-lang\": \"cql-text\",\n"
-                + "  \"limit\": 1,\n"
-                + "  \"startIndex\": 2\n"
-                + "}";
+        checkPagingLinksPostLast(4);
+    }
+
+    private void checkPagingLinksPostLast(Integer expectedNumberMatched) throws Exception {
+        String request =
+                """
+                {
+                  "collections": [
+                    "SAS1",
+                    "LANDSAT8"
+                  ],
+                  "filter": "eo:cloud_cover=0",
+                  "filter-lang": "cql-text",
+                  "limit": 1,
+                  "startIndex": 2
+                }\
+                """;
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // two links expected, prev, self
@@ -533,6 +672,11 @@ public class SearchTest extends STACTestSupport {
                 "div.card-header:has(a:contains(S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04)) ~ div.card-body");
         assertTextContains(s2Body, "[data-tid='gbounds']", "-119.174, 33.333, -117.969, 34.338.");
         assertTextContains(s2Body, "[data-tid='ccover']", "7");
+    }
+
+    @Override
+    protected String getLogConfiguration() {
+        return "DEFAULT_LOGGING";
     }
 
     @Test
@@ -704,8 +848,9 @@ public class SearchTest extends STACTestSupport {
                         "S2A_OPER_MSI_L1C_TL_SGS__20170226T171842_A008785_T32TPN_N02.04"));
 
         JSONArray array = doc.read("features[*].properties");
-        for (int i = 0; i < array.size(); i++) {
-            Map<String, Object> props = (Map<String, Object>) array.get(i);
+        for (Object o : array) {
+            @SuppressWarnings("unchecked")
+            Map<String, Object> props = (Map<String, Object>) o;
             assertFalse(props.containsKey("sat:absolute_orbit"));
             assertFalse(props.containsKey("instruments"));
             // more then just mandatory props
@@ -714,14 +859,15 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void testSearchPropertySelectionStaticJsonObj() throws Exception {
         DocumentContext doc = getAsJSONPath(
                 "ogc/stac/v1/search?collections=SENTINEL2&fields=properties,-properties.SENTINEL2.fullStaticObject.staticAttr1,-properties.SENTINEL2.fullStaticObject.staticAttr3.nestedStatic1&filter=datetime > DATE('2017-02-25') and datetime < DATE('2017-03-31')&sortby=id",
                 200);
 
         JSONArray array = doc.read("features[?(@.id != 'GS_TEST_PRODUCT.01')].properties");
-        for (int i = 0; i < array.size(); i++) {
-            Map<String, Object> props = (Map<String, Object>) array.get(i);
+        for (Object o : array) {
+            Map<String, Object> props = (Map<String, Object>) o;
             Map<String, Object> sentinelObject = (Map<String, Object>) props.get("SENTINEL2");
             Map<String, Object> staticValues = (Map<String, Object>) sentinelObject.get("fullStaticObject");
             assertFalse(staticValues.containsKey("staticAttr1"));
@@ -743,6 +889,7 @@ public class SearchTest extends STACTestSupport {
         assertEquals(0, doc.read(featurePath + ".links", List.class).size());
     }
 
+    @Test
     public void testIndexOptimizerVisitorConvertsDouble() throws Exception {
         List<String> collections = Arrays.asList("SAS1");
         Filter filter = getStacService().parseFilter(collections, "s1:ipf_version>2", null);
@@ -788,5 +935,62 @@ public class SearchTest extends STACTestSupport {
             global.getSettings().setProxyBaseUrl(null);
             getGeoServer().save(global);
         }
+    }
+
+    @Test
+    public void testCollectionSecurity() throws Exception {
+        // set a collection limit on proprietary collections
+        GeoServer gs = getGeoServer();
+        OSEOInfo service = gs.getService(OSEOInfo.class);
+        service.setRecordsPerPage(10000); // avoid paging hiding items
+        service.setMaximumRecordsPerPage(10000);
+        List<EOCollectionAccessLimitInfo> collectionLimits = service.getCollectionLimits();
+        collectionLimits.add(new EOCollectionAccessLimitInfoImpl("license = 'proprietary'", List.of(ROLE_PROPRIETARY)));
+        // the sensor type is not exposed in JSON, will have to use the collection identifiers for JSON tests
+        collectionLimits.add(new EOCollectionAccessLimitInfoImpl("eo:sensorType = 'ATMOSPHERIC'", List.of(ROLE_ATM)));
+        gs.save(service);
+
+        // warning about test data oddity, SAS1 and SAS9 are the eoIdentifiers of the two atm collections
+        // also, SAS9 has no items inside, so we cannot test its presence in results, only SAS1
+
+        // try to get everything as the anonymous user, should filter out proprietary and atm products
+        DocumentContext jsAnonymous = getAsJSONPath("ogc/stac/v1/search", 200);
+        assertJsonListSizeGreater(jsAnonymous, "features[?(@.collection == 'SENTINEL2')]", 0);
+        assertJsonListSize(jsAnonymous, "features[?(@.collection == 'LANDSAT8')]", 0);
+        assertJsonListSize(jsAnonymous, "features[?(@.collection == 'SAS1')]", 0);
+        assertJsonListSize(jsAnonymous, "features[?(@.collection == 'SAS9')]", 0);
+
+        // with role, non-disabled proprietary collections show up too (landsat8)
+        login("propuser", "secret", ROLE_PROPRIETARY);
+        DocumentContext jsProp = getAsJSONPath("ogc/stac/v1/search", 200);
+        assertJsonListSizeGreater(jsProp, "features[?(@.collection == 'SENTINEL2')]", 0);
+        assertJsonListSizeGreater(jsProp, "features[?(@.collection == 'LANDSAT8')]", 0);
+        assertJsonListSize(jsProp, "features[?(@.collection == 'SAS1')]", 0);
+
+        // with atm role, atm collections show up (sas1, sas9) but not proprietary ones (landsat8)
+        login("atmuser", "secret", ROLE_ATM);
+        DocumentContext jsAtm = getAsJSONPath("ogc/stac/v1/search", 200);
+        assertJsonListSizeGreater(jsAtm, "features[?(@.collection == 'SENTINEL2')]", 0);
+        assertJsonListSize(jsAtm, "features[?(@.collection == 'LANDSAT8')]", 0);
+        assertJsonListSizeGreater(jsAtm, "features[?(@.collection == 'SAS1')]", 0);
+
+        // now use both roles, should get both proprietary and atm collections
+        login("bothuser", "secret", ROLE_ATM, ROLE_PROPRIETARY);
+        DocumentContext jsBoth = getAsJSONPath("ogc/stac/v1/search", 200);
+        assertJsonListSizeGreater(jsBoth, "features[?(@.collection == 'SENTINEL2')]", 0);
+        assertJsonListSizeGreater(jsBoth, "features[?(@.collection == 'LANDSAT8')]", 0);
+        assertJsonListSizeGreater(jsBoth, "features[?(@.collection == 'SAS1')]", 0);
+
+        // finally, become all powerful admin and get them all
+        login("admin", "geoserver", "ROLE_ADMINISTRATOR");
+        DocumentContext jsAdmin = getAsJSONPath("ogc/stac/v1/search", 200);
+        assertJsonListSizeGreater(jsAdmin, "features[?(@.collection == 'SENTINEL2')]", 0);
+        assertJsonListSizeGreater(jsAdmin, "features[?(@.collection == 'LANDSAT8')]", 0);
+        assertJsonListSizeGreater(jsAdmin, "features[?(@.collection == 'SAS1')]", 0);
+    }
+
+    protected void assertJsonListSizeGreater(DocumentContext json, String jsonPath, int minimumSize) {
+        List<?> list = json.read(jsonPath, List.class);
+        assertThat(list.size(), Matchers.greaterThan(minimumSize));
     }
 }
