@@ -4,6 +4,9 @@
  */
 package org.geoserver.taskmanager.web.panel;
 
+import static org.geoserver.web.util.WebUtils.IsWicketCssFileEmpty;
+
+import java.io.Serial;
 import java.time.DayOfWeek;
 import java.time.format.TextStyle;
 import java.util.ArrayList;
@@ -21,12 +24,11 @@ import org.apache.wicket.behavior.AttributeAppender;
 import org.apache.wicket.markup.html.basic.Label;
 import org.apache.wicket.markup.html.basic.MultiLineLabel;
 import org.apache.wicket.markup.html.form.Form;
-import org.apache.wicket.markup.html.image.Image;
 import org.apache.wicket.markup.html.panel.Fragment;
 import org.apache.wicket.markup.html.panel.Panel;
 import org.apache.wicket.markup.repeater.DefaultItemReuseStrategy;
 import org.apache.wicket.model.IModel;
-import org.apache.wicket.request.resource.PackageResourceReference;
+import org.apache.wicket.request.resource.ResourceReference;
 import org.geoserver.taskmanager.data.Batch;
 import org.geoserver.taskmanager.data.Configuration;
 import org.geoserver.taskmanager.util.FrequencyUtil;
@@ -48,6 +50,21 @@ import org.geotools.util.logging.Logging;
 
 // TODO WICKET8 - Verify this page works OK
 public class BatchesPanel extends Panel {
+
+    private static final boolean isCssEmpty = IsWicketCssFileEmpty(BatchesPanel.class);
+
+    @Override
+    public void renderHead(org.apache.wicket.markup.head.IHeaderResponse response) {
+        super.renderHead(response);
+        // if the panel-specific CSS file contains actual css then have the browser load the css
+        if (!isCssEmpty) {
+            response.render(org.apache.wicket.markup.head.CssHeaderItem.forReference(
+                    new org.apache.wicket.request.resource.PackageResourceReference(
+                            getClass(), getClass().getSimpleName() + ".css")));
+        }
+    }
+
+    @Serial
     private static final long serialVersionUID = 1297739738862860160L;
 
     private static final Logger LOGGER = Logging.getLogger(BatchesPanel.class);
@@ -92,6 +109,7 @@ public class BatchesPanel extends Panel {
         ((GSModalWindow) dialog.get("dialog")).showUnloadConfirmation(false);
 
         add(new AjaxLink<Object>("addNew") {
+            @Serial
             private static final long serialVersionUID = -9184383036056499856L;
 
             @Override
@@ -113,6 +131,7 @@ public class BatchesPanel extends Panel {
         // the removal button
         add(
                 remove = new AjaxLink<Object>("removeSelected") {
+                    @Serial
                     private static final long serialVersionUID = 3581476968062788921L;
 
                     @Override
@@ -143,6 +162,7 @@ public class BatchesPanel extends Panel {
                                     new ParamResourceModel("confirmDeleteBatchesDialog.title", BatchesPanel.this));
                             dialog.showOkCancel(target, new GeoServerDialog.DialogDelegate() {
 
+                                @Serial
                                 private static final long serialVersionUID = -5552087037163833563L;
 
                                 private String error = null;
@@ -209,6 +229,7 @@ public class BatchesPanel extends Panel {
 
         add(new AjaxLink<Object>("refresh") {
 
+            @Serial
             private static final long serialVersionUID = 3905640474193868255L;
 
             @Override
@@ -226,6 +247,7 @@ public class BatchesPanel extends Panel {
         add(new Form<>("form")
                 .add(
                         batchesPanel = new GeoServerTablePanel<Batch>("batchesPanel", batchesModel, true) {
+                            @Serial
                             private static final long serialVersionUID = -8943273843044917552L;
 
                             @Override
@@ -249,6 +271,7 @@ public class BatchesPanel extends Panel {
                                     if (findParent(Form.class) == null) {
                                         return new SimpleAjaxLink<String>(
                                                 id, (IModel<String>) property.getModel(itemModel)) {
+                                            @Serial
                                             private static final long serialVersionUID = -9184383036056499856L;
 
                                             @Override
@@ -263,6 +286,7 @@ public class BatchesPanel extends Panel {
                                     } else {
                                         return new SimpleAjaxSubmitLink(
                                                 id, (IModel<String>) property.getModel(itemModel)) {
+                                            @Serial
                                             private static final long serialVersionUID = -9184383036056499856L;
 
                                             @Override
@@ -279,12 +303,13 @@ public class BatchesPanel extends Panel {
                                     }
 
                                 } else if (property == BatchesModel.ENABLED) {
-                                    PackageResourceReference icon =
+                                    CatalogIconFactory icons = CatalogIconFactory.get();
+                                    ResourceReference icon =
                                             itemModel.getObject().isEnabled()
-                                                    ? CatalogIconFactory.get().getEnabledIcon()
-                                                    : CatalogIconFactory.get().getDisabledIcon();
+                                                    ? icons.getEnabledIcon()
+                                                    : icons.getDisabledIcon();
                                     Fragment f = new Fragment(id, "iconFragment", BatchesPanel.this);
-                                    f.add(new Image("enabledIcon", icon));
+                                    f.add(icons.getIcon("enabledIcon", icon));
                                     return f;
                                 } else if (property == BatchesModel.FREQUENCY) {
                                     return new Label(
@@ -294,6 +319,7 @@ public class BatchesPanel extends Panel {
                                 } else if (property == BatchesModel.STATUS) {
                                     return new SimpleAjaxLink<String>(
                                             id, (IModel<String>) property.getModel(itemModel)) {
+                                        @Serial
                                         private static final long serialVersionUID = -9184383036056499856L;
 
                                         @Override
@@ -326,6 +352,7 @@ public class BatchesPanel extends Panel {
                                         return new Label(id);
                                     } else {
                                         SimpleAjaxSubmitLink link = new SimpleAjaxSubmitLink(id, null) {
+                                            @Serial
                                             private static final long serialVersionUID = -9184383036056499856L;
 
                                             @Override
@@ -364,9 +391,9 @@ public class BatchesPanel extends Panel {
             if (minutes <= 60 && hour < 24) {
                 return new ParamResourceModel("Daily", this).getString()
                         + ", "
-                        + String.format("%02d", hour)
+                        + "%02d".formatted(hour)
                         + ":"
-                        + String.format("%02d", minutes);
+                        + "%02d".formatted(minutes);
             }
         } else {
             matcher = FrequencyUtil.WEEKLY_PATTERN.matcher(frequency);
@@ -379,9 +406,9 @@ public class BatchesPanel extends Panel {
                             + ", "
                             + day.getDisplayName(TextStyle.FULL, getLocale())
                             + ", "
-                            + String.format("%02d", hour)
+                            + "%02d".formatted(hour)
                             + ":"
-                            + String.format("%02d", minutes);
+                            + "%02d".formatted(minutes);
                 }
             } else {
                 matcher = FrequencyUtil.MONTHLY_PATTERN.matcher(frequency);
@@ -396,9 +423,9 @@ public class BatchesPanel extends Panel {
                                 + " "
                                 + day
                                 + ", "
-                                + String.format("%02d", hour)
+                                + "%02d".formatted(hour)
                                 + ":"
-                                + String.format("%02d", minutes);
+                                + "%02d".formatted(minutes);
                     }
                 }
             }
