@@ -12,7 +12,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
@@ -58,10 +58,10 @@ public class FileServiceDataTest extends AbstractTaskManagerTest {
         String filename = System.currentTimeMillis() + "-test.txt";
         String path = FileUtils.getTempDirectoryPath() + "/" + filename;
 
-        Assert.assertFalse(Files.exists(Paths.get(path)));
+        Assert.assertFalse(Files.exists(Path.of(path)));
         String content = "test the file service";
         service.create(filename, IOUtils.toInputStream(content, "UTF-8"));
-        Assert.assertTrue(Files.exists(Paths.get(path)));
+        Assert.assertTrue(Files.exists(Path.of(path)));
 
         boolean fileExists = service.checkFileExists(filename);
         Assert.assertTrue(fileExists);
@@ -70,7 +70,7 @@ public class FileServiceDataTest extends AbstractTaskManagerTest {
         Assert.assertEquals(content, actualContent);
 
         service.delete(filename);
-        Assert.assertFalse(Files.exists(Paths.get(path)));
+        Assert.assertFalse(Files.exists(Path.of(path)));
     }
 
     @Test
@@ -93,10 +93,10 @@ public class FileServiceDataTest extends AbstractTaskManagerTest {
         String filename = System.currentTimeMillis() + "-test.txt";
         String path = FileUtils.getTempDirectoryPath() + "/" + filename;
 
-        Assert.assertFalse(Files.exists(Paths.get(path)));
+        Assert.assertFalse(Files.exists(Path.of(path)));
         String content = "test the file service";
         service.create(filename, IOUtils.toInputStream(content, "UTF-8"), true);
-        Assert.assertTrue(Files.exists(Paths.get(path)));
+        Assert.assertTrue(Files.exists(Path.of(path)));
 
         boolean fileExists = service.checkFileExists(filename);
         Assert.assertTrue(fileExists);
@@ -106,7 +106,7 @@ public class FileServiceDataTest extends AbstractTaskManagerTest {
         Assert.assertEquals(content + "extra text\n", actualContent);
 
         service.delete(filename);
-        Assert.assertFalse(Files.exists(Paths.get(path)));
+        Assert.assertFalse(Files.exists(Path.of(path)));
     }
 
     @Test
@@ -117,15 +117,15 @@ public class FileServiceDataTest extends AbstractTaskManagerTest {
         String filename = "subfolder/" + System.currentTimeMillis() + "-test.txt";
         String path = FileUtils.getTempDirectoryPath() + "/fileservicetest/" + filename;
 
-        Assert.assertFalse(Files.exists(Paths.get(path)));
+        Assert.assertFalse(Files.exists(Path.of(path)));
         service.create(filename, IOUtils.toInputStream("test the file service", "UTF-8"));
-        Assert.assertTrue(Files.exists(Paths.get(path)));
+        Assert.assertTrue(Files.exists(Path.of(path)));
 
         boolean fileExists = service.checkFileExists(filename);
         Assert.assertTrue(fileExists);
 
         service.delete(filename);
-        Assert.assertFalse(Files.exists(Paths.get(path)));
+        Assert.assertFalse(Files.exists(Path.of(path)));
 
         List<String> folders = service.listSubfolders();
         Assert.assertEquals(1, folders.size());
@@ -161,10 +161,10 @@ public class FileServiceDataTest extends AbstractTaskManagerTest {
 
         Assert.assertEquals(5, folders.size());
         Assert.assertTrue(folders.contains("foo"));
-        Assert.assertTrue(folders.contains(Paths.get("foo", "bar").toString()));
-        Assert.assertTrue(folders.contains(Paths.get("foo", "bar", "foobar").toString()));
+        Assert.assertTrue(folders.contains(Path.of("foo", "bar").toString()));
+        Assert.assertTrue(folders.contains(Path.of("foo", "bar", "foobar").toString()));
         Assert.assertTrue(
-                folders.contains(Paths.get("foo", "bar", "foobar", "barfoo").toString()));
+                folders.contains(Path.of("foo", "bar", "foobar", "barfoo").toString()));
         Assert.assertTrue(folders.contains("hello"));
     }
 
