@@ -10,7 +10,6 @@ import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 
@@ -19,8 +18,7 @@ public class StationsMappingsSetup {
     public static final String MAPPING_FILE_NAME = "mappings.xml";
     public static final String INCLUDED_FILE_NAME = "includedTypes.xml";
 
-    public void setupMapping(
-            String solrUrl, String solrCoreName, PostgresqlProperties pgProps, File testDir) {
+    public void setupMapping(String solrUrl, String solrCoreName, PostgresqlProperties pgProps, File testDir) {
         // replace mappings.xml placeholders
         String mappingsContent = loadFileAsString("test-data/" + MAPPING_FILE_NAME);
         mappingsContent = StringUtils.replace(mappingsContent, "${solr_url}", solrUrl);
@@ -31,13 +29,13 @@ public class StationsMappingsSetup {
         includedContent = replacePgPlaceholders(includedContent, pgProps);
         try {
             // save as mappings.xml final file
-            Path path = Paths.get(testDir.getAbsolutePath(), MAPPING_FILE_NAME);
+            Path path = Path.of(testDir.getAbsolutePath(), MAPPING_FILE_NAME);
             Files.write(path, mappingsContent.getBytes());
             // save as includedTypes.xml final file
-            Path itpath = Paths.get(testDir.getAbsolutePath(), INCLUDED_FILE_NAME);
+            Path itpath = Path.of(testDir.getAbsolutePath(), INCLUDED_FILE_NAME);
             Files.write(itpath, includedContent.getBytes());
             // create app-schema-cache directory
-            Path dirpath = Paths.get(testDir.getAbsolutePath(), "app-schema-cache");
+            Path dirpath = Path.of(testDir.getAbsolutePath(), "app-schema-cache");
             Files.createDirectories(dirpath);
             copyRelatedFiles(testDir.getAbsolutePath());
         } catch (IOException e) {
@@ -48,12 +46,10 @@ public class StationsMappingsSetup {
     protected String replacePgPlaceholders(String mappingsContent, PostgresqlProperties pgProps) {
         mappingsContent = StringUtils.replace(mappingsContent, "${pg_host}", pgProps.getHost());
         mappingsContent = StringUtils.replace(mappingsContent, "${pg_port}", pgProps.getPort());
-        mappingsContent =
-                StringUtils.replace(mappingsContent, "${pg_database}", pgProps.getDatabase());
+        mappingsContent = StringUtils.replace(mappingsContent, "${pg_database}", pgProps.getDatabase());
         mappingsContent = StringUtils.replace(mappingsContent, "${pg_schema}", pgProps.getSchema());
         mappingsContent = StringUtils.replace(mappingsContent, "${pg_user}", pgProps.getUser());
-        mappingsContent =
-                StringUtils.replace(mappingsContent, "${pg_password}", pgProps.getPassword());
+        mappingsContent = StringUtils.replace(mappingsContent, "${pg_password}", pgProps.getPassword());
         return mappingsContent;
     }
 
@@ -65,7 +61,7 @@ public class StationsMappingsSetup {
 
     private void copyFile(String fileName, String testDirPath) throws IOException {
         InputStream in = getClass().getClassLoader().getResourceAsStream("test-data/" + fileName);
-        Path target = Paths.get(testDirPath, fileName);
+        Path target = Path.of(testDirPath, fileName);
         Files.copy(in, target);
         in.close();
     }
@@ -73,10 +69,7 @@ public class StationsMappingsSetup {
     public String loadFileAsString(String uri) {
         String content = null;
         try {
-            content =
-                    IOUtils.toString(
-                            getClass().getClassLoader().getResourceAsStream(uri),
-                            StandardCharsets.UTF_8);
+            content = IOUtils.toString(getClass().getClassLoader().getResourceAsStream(uri), StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new RuntimeException("Error loading mapping file.", e);
         }
