@@ -70,10 +70,10 @@ public class HandlesIncludesTest extends StationsAppSchemaTestSupport {
             File gmlDirectory = getDirectoryForGmlPrefix(gmlPrefix);
             gmlDirectory.mkdirs();
             // add the necessary files
-            File stationsMappings = new File(gmlDirectory, String.format("%s_%s.xml", mappingsName, gmlPrefix));
-            File stationsProperties = new File(gmlDirectory, String.format("stations_%s.properties", gmlPrefix));
-            File stationsSchema = new File(gmlDirectory, String.format("stations_%s.xsd", gmlPrefix));
-            File measurementsSchema = new File(gmlDirectory, String.format("measurements_%s.xsd", gmlPrefix));
+            File stationsMappings = new File(gmlDirectory, "%s_%s.xml".formatted(mappingsName, gmlPrefix));
+            File stationsProperties = new File(gmlDirectory, "stations_%s.properties".formatted(gmlPrefix));
+            File stationsSchema = new File(gmlDirectory, "stations_%s.xsd".formatted(gmlPrefix));
+            File measurementsSchema = new File(gmlDirectory, "measurements_%s.xsd".formatted(gmlPrefix));
             // perform the parameterization
             substituteParameters("/test-data/stations/" + mappingsPath, parameters, stationsMappings);
             substituteParameters(
@@ -86,7 +86,7 @@ public class HandlesIncludesTest extends StationsAppSchemaTestSupport {
             // create station feature type
             addFeatureType(
                     namespacePrefix,
-                    String.format("Station_%s", gmlPrefix),
+                    "Station_%s".formatted(gmlPrefix),
                     stationsMappings.getAbsolutePath(),
                     stationsProperties.getAbsolutePath(),
                     stationsSchema.getAbsolutePath(),
@@ -105,10 +105,9 @@ public class HandlesIncludesTest extends StationsAppSchemaTestSupport {
             File gmlDirectory = getDirectoryForGmlPrefix(gmlPrefix);
             gmlDirectory.mkdirs();
             // add the necessary files
-            File measurementsMappings = new File(gmlDirectory, String.format("%s_%s.xml", mappingsName, gmlPrefix));
-            File measurementsProperties =
-                    new File(gmlDirectory, String.format("measurements_%s.properties", gmlPrefix));
-            File measurementsSchema = new File(gmlDirectory, String.format("measurements_%s.xsd", gmlPrefix));
+            File measurementsMappings = new File(gmlDirectory, "%s_%s.xml".formatted(mappingsName, gmlPrefix));
+            File measurementsProperties = new File(gmlDirectory, "measurements_%s.properties".formatted(gmlPrefix));
+            File measurementsSchema = new File(gmlDirectory, "measurements_%s.xsd".formatted(gmlPrefix));
             // perform the parameterization
             substituteParameters("/test-data/stations/" + mappingsPath, parameters, measurementsMappings);
             substituteParameters(
@@ -120,7 +119,7 @@ public class HandlesIncludesTest extends StationsAppSchemaTestSupport {
             // create measurements feature type
             addFeatureType(
                     namespacePrefix,
-                    String.format("Measurement_%s", gmlPrefix),
+                    "Measurement_%s".formatted(gmlPrefix),
                     measurementsMappings.getAbsolutePath(),
                     measurementsProperties.getAbsolutePath(),
                     measurementsSchema.getAbsolutePath());
