@@ -4,6 +4,9 @@
  */
 package org.geoserver.importer.rest;
 
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
@@ -13,15 +16,10 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import net.sf.json.JSONException;
-import net.sf.json.JSONObject;
-import org.apache.commons.fileupload.FileItem;
-import org.apache.commons.fileupload.FileUploadException;
-import org.apache.commons.fileupload.disk.DiskFileItemFactory;
-import org.apache.commons.fileupload.servlet.ServletFileUpload;
+import org.apache.commons.fileupload2.core.DiskFileItem;
+import org.apache.commons.fileupload2.core.DiskFileItemFactory;
+import org.apache.commons.fileupload2.core.FileUploadException;
+import org.apache.commons.fileupload2.jakarta.servlet6.JakartaServletFileUpload;
 import org.apache.commons.io.IOUtils;
 import org.geoserver.catalog.Catalog;
 import org.geoserver.catalog.CatalogBuilder;
@@ -53,6 +51,8 @@ import org.geotools.api.referencing.NoSuchAuthorityCodeException;
 import org.geotools.api.referencing.crs.CoordinateReferenceSystem;
 import org.geotools.referencing.CRS;
 import org.geotools.util.logging.Logging;
+import org.kordamp.json.JSONException;
+import org.kordamp.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -68,7 +68,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.servlet.mvc.condition.PatternsRequestCondition;
 
 @RestController
 @RequestMapping(
@@ -199,7 +198,7 @@ public class ImportTaskController extends ImportBaseController {
         @Bean
         PutIgnoringExtensionContentNegotiationStrategy importTaskPutContentNegotiationStrategy() {
             return new PutIgnoringExtensionContentNegotiationStrategy(
-                    new PatternsRequestCondition(RestBaseController.ROOT_PATH + "/imports/{id}/tasks/{taskId:.+}"),
+                    List.of("/imports/{id}/tasks/{taskId:.+}"),
                     Arrays.asList(MediaType.APPLICATION_JSON, MediaType.TEXT_HTML));
         }
     }
@@ -283,7 +282,7 @@ public class ImportTaskController extends ImportBaseController {
                 long taskId = newTasks.get(0).getId();
                 response.setHeader(
                         "Location",
-                        RequestInfo.get().servletURI(String.format("/imports/%d/tasks/%d", context.getId(), taskId)));
+                        RequestInfo.get().servletURI("/imports/%d/tasks/%d".formatted(context.getId(), taskId)));
             }
             response.setStatus(HttpStatus.CREATED.value());
 
@@ -335,12 +334,9 @@ public class ImportTaskController extends ImportBaseController {
     }
 
     public ImportData handleMultiPartFormUpload(HttpServletRequest request, ImportContext context) {
-        DiskFileItemFactory factory = new DiskFileItemFactory();
-        // @revisit - this appears to be causing OOME
-        // factory.setSizeThreshold(102400000);
-
-        ServletFileUpload upload = new ServletFileUpload(factory);
-        List<FileItem> items = null;
+        JakartaServletFileUpload<DiskFileItem, DiskFileItemFactory> upload =
+                new JakartaServletFileUpload<>(DiskFileItemFactory.builder().get());
+        List<DiskFileItem> items = null;
         try {
             items = upload.parseRequest(request);
         } catch (FileUploadException e) {
@@ -351,7 +347,7 @@ public class ImportTaskController extends ImportBaseController {
         Directory directory = findOrCreateDirectory(context);
 
         // unpack all the files
-        for (FileItem item : items) {
+        for (DiskFileItem item : items) {
             if (item.getName() == null) {
                 continue;
             }
@@ -379,12 +375,12 @@ public class ImportTaskController extends ImportBaseController {
             // ImportContextJSONConverterReader(importer,request.getInputStream()).task();
         } catch (ValidationException | IOException ve) {
             LOGGER.log(Level.WARNING, null, ve);
-            throw converter.badRequest(ve);
+            throw ImportJSONWriter.badRequest(ve);
         }
 
         boolean change = false;
         if (task.getStore() != null) {
-            // JD: moved to TaskTargetResource, but handle here for backward compatability
+            // JD: moved to TaskTargetResource, but handle here for backward compatibility
             updateStoreInfo(orig, task.getStore(), importer);
             change = true;
         }
@@ -400,7 +396,7 @@ public class ImportTaskController extends ImportBaseController {
 
         if (task.getLayer() != null) {
             change = true;
-            // now handled by LayerResource, but handle here for backwards compatability
+            // now handled by LayerResource, but handle here for backwards compatibility
             updateLayer(orig, task.getLayer(), importer, converter);
         }
 
@@ -506,7 +502,7 @@ public class ImportTaskController extends ImportBaseController {
             } catch (NoSuchAuthorityCodeException ex) {
                 String msg = "Invalid SRS " + srs;
                 LOGGER.warning(msg + " in PUT request");
-                throw converter.badRequest(msg);
+                throw ImportJSONWriter.badRequest(msg);
             } catch (FactoryException ex) {
                 LOGGER.log(Level.SEVERE, "Error with referencing, message is: " + ex.getMessage(), ex);
                 throw new RestException("Error with referencing", HttpStatus.INTERNAL_SERVER_ERROR, ex);
@@ -552,12 +548,12 @@ public class ImportTaskController extends ImportBaseController {
             CatalogBuilder cb = new CatalogBuilder(importer.getCatalog());
 
             StoreInfo clone;
-            if (existing instanceof DataStoreInfo) {
+            if (existing instanceof DataStoreInfo info1) {
                 clone = cb.buildDataStore(existing.getName());
-                cb.updateDataStore((DataStoreInfo) clone, (DataStoreInfo) existing);
-            } else if (existing instanceof CoverageStoreInfo) {
+                cb.updateDataStore((DataStoreInfo) clone, info1);
+            } else if (existing instanceof CoverageStoreInfo info) {
                 clone = cb.buildCoverageStore(existing.getName());
-                cb.updateCoverageStore((CoverageStoreInfo) clone, (CoverageStoreInfo) existing);
+                cb.updateCoverageStore((CoverageStoreInfo) clone, info);
             } else {
                 throw new RestException("Unable to handle existing store: " + update, HttpStatus.INTERNAL_SERVER_ERROR);
             }
@@ -570,10 +566,10 @@ public class ImportTaskController extends ImportBaseController {
         } else {
             // update the original
             CatalogBuilder cb = new CatalogBuilder(importer.getCatalog());
-            if (orig instanceof DataStoreInfo) {
-                cb.updateDataStore((DataStoreInfo) orig, (DataStoreInfo) update);
-            } else if (orig instanceof CoverageStoreInfo) {
-                cb.updateCoverageStore((CoverageStoreInfo) orig, (CoverageStoreInfo) update);
+            if (orig instanceof DataStoreInfo info1) {
+                cb.updateDataStore(info1, (DataStoreInfo) update);
+            } else if (orig instanceof CoverageStoreInfo info) {
+                cb.updateCoverageStore(info, (CoverageStoreInfo) update);
             } else {
                 throw new RestException("Unable to update store with " + update, HttpStatus.INTERNAL_SERVER_ERROR);
             }
