@@ -78,9 +78,11 @@ public class ImportTaskTableTest extends GeoServerWicketTestSupport {
 
         // Check that the WKT links set
         tester.assertModelValue(
-                "taskTable:listContainer:items:1:itemProperties:2:component:form:crs:wkt:wktLabel", "CRS:NAD27");
+                "taskTable:listContainer:items:1:itemProperties:2:component:form:crs:wkt:wktLabel",
+                "NAD27 longitude-latitude");
         tester.assertModelValue(
-                "taskTable:listContainer:items:2:itemProperties:2:component:form:crs:wkt:wktLabel", "CRS:NAD83");
+                "taskTable:listContainer:items:2:itemProperties:2:component:form:crs:wkt:wktLabel",
+                "NAD83 longitude-latitude");
 
         // Apply the first
         tester.clickLink("taskTable:listContainer:items:1:itemProperties:2:component:form:apply", true);
@@ -96,7 +98,7 @@ public class ImportTaskTableTest extends GeoServerWicketTestSupport {
     void fill(String formPath, String fieldPath, String value) {
         FormTester form = tester.newFormTester(formPath);
         form.setValue(fieldPath, value);
-        tester.executeAjaxEvent(String.format("%s:%s", formPath, fieldPath), "blur");
+        tester.executeAjaxEvent("%s:%s".formatted(formPath, fieldPath), "blur");
     }
 
     @Test
