@@ -13,6 +13,8 @@ import static org.geoserver.ows.util.ResponseUtils.params;
 
 import com.google.common.base.Throwables;
 import com.google.common.collect.Iterables;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
 import java.awt.Dimension;
 import java.io.IOException;
 import java.lang.reflect.Proxy;
@@ -37,8 +39,6 @@ import java.util.function.Supplier;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
 import org.geoserver.catalog.Catalog;
 import org.geoserver.catalog.FeatureTypeInfo;
 import org.geoserver.catalog.KeywordInfo;
@@ -67,7 +67,9 @@ import org.geoserver.util.DimensionWarning;
 import org.geoserver.util.HTTPWarningAppender;
 import org.geoserver.wms.GetLegendGraphicRequest;
 import org.geoserver.wms.GetMapRequest;
+import org.geoserver.wms.MetatileContextHolder;
 import org.geoserver.wms.RasterCleaner;
+import org.geoserver.wms.TiledWebMap;
 import org.geoserver.wms.WMS;
 import org.geoserver.wms.WebMap;
 import org.geoserver.wms.capabilities.CapabilityUtil;
@@ -264,6 +266,11 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
         return info.getName();
     }
 
+    /** Returns the local name, useful to create file names for tiles for example */
+    public String getSimpleName() {
+        return CatalogConfiguration.removeWorkspacePrefix(info.getName(), catalog);
+    }
+
     void setConfigErrorMessage(String configErrorMessage) {
         this.configErrorMessage = configErrorMessage;
     }
@@ -314,8 +321,8 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
         }
         boolean geoserverLayerEnabled;
         PublishedInfo published = getPublishedInfo();
-        if (published instanceof LayerInfo) {
-            geoserverLayerEnabled = ((LayerInfo) published).enabled();
+        if (published instanceof LayerInfo layerInfo) {
+            geoserverLayerEnabled = layerInfo.enabled();
         } else {
             // LayerGroupInfo has no enabled property, so assume true
             geoserverLayerEnabled = true;
@@ -372,7 +379,7 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
 
     private ResourceInfo getResourceInfo() {
         PublishedInfo publishedInfo = getPublishedInfo();
-        return publishedInfo instanceof LayerInfo ? ((LayerInfo) publishedInfo).getResource() : null;
+        return publishedInfo instanceof LayerInfo li ? li.getResource() : null;
     }
 
     /**
@@ -389,8 +396,7 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
         List<ContactInformation> contacts = Collections.emptyList();
 
         PublishedInfo publishedInfo = getPublishedInfo();
-        ResourceInfo resourceInfo =
-                publishedInfo instanceof LayerInfo ? ((LayerInfo) publishedInfo).getResource() : null;
+        ResourceInfo resourceInfo = publishedInfo instanceof LayerInfo li ? li.getResource() : null;
         if (resourceInfo != null) {
             title = resourceInfo.getTitle();
             description = resourceInfo.getAbstract();
@@ -399,8 +405,7 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
                 keywords.add(kw.getValue());
             }
         } else {
-            if (publishedInfo instanceof LayerGroupInfo) {
-                LayerGroupInfo lg = (LayerGroupInfo) publishedInfo;
+            if (publishedInfo instanceof LayerGroupInfo lg) {
                 if (lg.getTitle() != null) {
                     title = lg.getTitle();
                 }
@@ -528,7 +533,7 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
 
         int metaX;
         int metaY;
-        if (mime.supportsTiling()) {
+        if (GWC.supportsMetaTiling(mime)) {
             metaX = info.getMetaTilingX();
             metaY = info.getMetaTilingY();
         } else {
@@ -654,18 +659,23 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
             throws Exception {
         WebMap map;
         long requestTime = System.currentTimeMillis();
+        final GridSubset gridSubset = getGridSubset(conveyorTile.getGridSetId());
 
-        // Actually fetch the metatile data
-        map = dispatchGetMap(conveyorTile, metaTile);
+        try {
+            MetatileContextHolder.set(buildMetaInfo(metaTile, gridSubset));
+            // Actually fetch the metatile data
+            map = dispatchGetMap(conveyorTile, metaTile);
+        } finally {
+            MetatileContextHolder.clear();
+        }
 
         checkNotNull(map, "Did not obtain a WebMap from GeoServer's Dispatcher");
         metaTile.setWebMap(map);
-
         setupCachingStrategy(conveyorTile);
-
+        final TiledWebMap twm = map instanceof TiledWebMap ? (TiledWebMap) map : null;
         final long[][] gridPositions = metaTile.getTilesGridPositions();
         final long[] gridLoc = conveyorTile.getTileIndex();
-        final GridSubset gridSubset = getGridSubset(conveyorTile.getGridSetId());
+
         final int numberOfTiles = gridPositions.length;
 
         final int zoomLevel = (int) gridLoc[2];
@@ -688,14 +698,15 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
                     tileLockLatch.countDown();
                     continue;
                 }
-
-                Supplier<Resource> encodeTileTask = encodeTileTask(metaTile, tileIndex);
+                final Supplier<Resource> tileResourceSupplier = twm != null
+                        ? () -> getPreTiledResource(twm, finalTileIndex)
+                        : encodeTileTask(metaTile, finalTileIndex);
 
                 if (isConveyorTile) {
                     // Always encode the conveyor tile on the main thread, and set a tentative
                     // creation time for it (the actual save time will be later, the first
                     // time modification check from the client will re-fetch the tile
-                    Resource resource = encodeTileTask.get();
+                    Resource resource = tileResourceSupplier.get();
                     conveyorTile.setBlob(resource);
                     conveyorTile.getStorageObject().setCreated(requestTime);
 
@@ -717,7 +728,7 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
                     // For all other tiles, either encode/save fully asynchronously or
                     // fully on the main thread
                     Runnable tileSaver = () -> {
-                        Resource resource = encodeTileTask.get();
+                        Resource resource = tileResourceSupplier.get();
                         saveTileTask(metaTile, finalTileIndex, conveyorTile, resource, requestTime)
                                 .run();
                     };
@@ -748,6 +759,12 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
             // so we can dispose of the meta-tile right away
             metaTile.dispose();
         }
+    }
+
+    /** Retrieves a pre-tiled Byte Array resource from a TiledWebMap by tileIndex */
+    private Resource getPreTiledResource(TiledWebMap tiledWebMap, int tileIndex) {
+        byte[] tileData = tiledWebMap.getTile(tileIndex);
+        return new ByteArrayResource(tileData);
     }
 
     private void runAsyncAfterAllFuturesComplete(
@@ -980,11 +997,9 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
         // gs might be null in test case runs.
         if ((gs != null) && !gs.getGlobal().isGlobalServices()) {
             PublishedInfo publishedInfo = getPublishedInfo();
-            if (publishedInfo instanceof LayerInfo) {
-                LayerInfo layerInfo = (LayerInfo) publishedInfo;
+            if (publishedInfo instanceof LayerInfo layerInfo) {
                 params.put("WORKSPACE", layerInfo.getResource().getNamespace().getName());
-            } else if (publishedInfo instanceof LayerGroupInfo) {
-                LayerGroupInfo groupInfo = (LayerGroupInfo) publishedInfo;
+            } else if (publishedInfo instanceof LayerGroupInfo groupInfo) {
                 WorkspaceInfo workspace = groupInfo.getWorkspace();
                 if (workspace == null) {
                     throw new ParameterException("Global web services are disabled, global LayerGroup "
@@ -1074,7 +1089,7 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
 
         int metaX = info.getMetaTilingX();
         int metaY = info.getMetaTilingY();
-        if (!tile.getMimeType().supportsTiling()) {
+        if (!GWC.supportsMetaTiling(tile.getMimeType())) {
             metaX = metaY = 1;
         }
         getMetatilingResponse(tile, tryCache, metaX, metaY);
@@ -1390,8 +1405,8 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
         }
 
         PublishedInfo published = getPublishedInfo();
-        if (published instanceof LayerInfo) {
-            return getLayerMaxAge((LayerInfo) published);
+        if (published instanceof LayerInfo layerInfo) {
+            return getLayerMaxAge(layerInfo);
         }
         LayerGroupInfo layerGroupInfo = (LayerGroupInfo) published;
         if (layerGroupInfo != null) {
@@ -1419,10 +1434,10 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
         int maxAge = Integer.MAX_VALUE;
         for (PublishedInfo pi : lg.getLayers()) {
             int piAge;
-            if (pi instanceof LayerInfo) {
-                piAge = getLayerMaxAge((LayerInfo) pi);
-            } else if (pi instanceof LayerGroupInfo) {
-                piAge = getGroupMaxAge((LayerGroupInfo) pi);
+            if (pi instanceof LayerInfo layerInfo) {
+                piAge = getLayerMaxAge(layerInfo);
+            } else if (pi instanceof LayerGroupInfo groupInfo) {
+                piAge = getGroupMaxAge(groupInfo);
             } else {
                 if (LOGGER.isLoggable(Level.FINE)) {
                     LOGGER.log(
@@ -1548,9 +1563,9 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
         List<MetadataLinkInfo> gsMetadataLinks;
         List<MetadataURL> gwcMetadataLinks = new ArrayList<>();
         PublishedInfo published = getPublishedInfo();
-        if (published instanceof LayerInfo) {
+        if (published instanceof LayerInfo layerInfo) {
             // this is a normal layer
-            gsMetadataLinks = ((LayerInfo) published).getResource().getMetadataLinks();
+            gsMetadataLinks = layerInfo.getResource().getMetadataLinks();
         } else {
             // this is a layer group
             gsMetadataLinks = new ArrayList<>();
@@ -1617,8 +1632,7 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
                 scalesDenominator = CapabilityUtil.searchMinMaxScaleDenominator(Collections.singleton(styleInfo));
             } catch (Exception exception) {
                 throw new RuntimeException(
-                        String.format(
-                                "Error searching max and min scale denominators for style '%s'.", styleInfo.getName()),
+                        "Error searching max and min scale denominators for style '%s'.".formatted(styleInfo.getName()),
                         exception);
             }
             org.geoserver.catalog.LegendInfo legendInfo = styleInfo.getLegend();
@@ -1773,8 +1787,8 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
 
     private void setVectorLayers(PublishedInfo publishedInfo, List<VectorLayerMetadata> metadataLayers) {
         ResourceInfo resource = getResource(publishedInfo);
-        if (resource instanceof FeatureTypeInfo) {
-            addVectorLayerMetadata((FeatureTypeInfo) resource, metadataLayers);
+        if (resource instanceof FeatureTypeInfo typeInfo) {
+            addVectorLayerMetadata(typeInfo, metadataLayers);
         }
     }
 
@@ -1782,8 +1796,8 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
         LayerGroupInfo layerGroupInfo = null;
         if (Proxy.isProxyClass(publishedInfo.getClass())) {
             layerGroupInfo = (LayerGroupInfo) ModificationProxy.unwrap(publishedInfo);
-        } else if (publishedInfo instanceof LayerGroupInfo) {
-            layerGroupInfo = (LayerGroupInfo) publishedInfo;
+        } else if (publishedInfo instanceof LayerGroupInfo groupInfo) {
+            layerGroupInfo = groupInfo;
         }
         if (layerGroupInfo != null) {
             List<PublishedInfo> layers = layerGroupInfo.getLayers();
@@ -1809,8 +1823,8 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
         if (Proxy.isProxyClass(publishedInfo.getClass())) {
             LayerInfo inner = (LayerInfo) ModificationProxy.unwrap(publishedInfo);
             resource = inner.getResource();
-        } else if (publishedInfo instanceof LayerInfo) {
-            resource = ((LayerInfo) publishedInfo).getResource();
+        } else if (publishedInfo instanceof LayerInfo layerInfo) {
+            resource = layerInfo.getResource();
         }
         return resource;
     }
@@ -1839,5 +1853,31 @@ public class GeoServerTileLayer extends TileLayer implements ProxyLayer, TileJSO
         if (metadata != null) {
             metadataLayers.add(metadata);
         }
+    }
+
+    private static MetatileContextHolder.MetaInfo buildMetaInfo(GeoServerMetaTile metaTile, GridSubset gridSubset) {
+        // tile size in pixels (GridSet is square tiles)
+        int tileSize = gridSubset.getGridSet().getTileWidth();
+
+        // metaX/metaY = number of unique columns/rows in this metatile
+        long[][] tiles = metaTile.getTilesGridPositions();
+        if (tiles.length == 1) {
+            // Avoid setting up meta-tiling machinery for single tiles
+            return null;
+        }
+        java.util.HashSet<Long> cols = new java.util.HashSet<>();
+        java.util.HashSet<Long> rows = new java.util.HashSet<>();
+        for (long[] p : tiles) {
+            cols.add(p[0]);
+            rows.add(p[1]);
+        }
+
+        int metaX = cols.size();
+        int metaY = rows.size();
+
+        int widthPx = metaX * tileSize;
+        int heightPx = metaY * tileSize;
+
+        return new MetatileContextHolder.MetaInfo(widthPx, heightPx, tileSize);
     }
 }
