@@ -51,7 +51,7 @@ import org.geotools.data.postgis.PostgisNGDataStoreFactory;
 import org.geotools.jdbc.JDBCDataStoreFactory;
 import org.geotools.util.GrowableInternationalString;
 import org.geotools.util.Version;
-import org.springframework.lang.Nullable;
+import org.jspecify.annotations.Nullable;
 
 /**
  * Support to configure some concrete {@link ServiceInfo} classes and xstream loaders for tests, since there're no
@@ -228,7 +228,7 @@ class DataDirectoryLoaderTestSupport {
 
     public <S extends ServiceInfo> S serviceInfo(WorkspaceInfo workspace, String name, Supplier<S> factory) {
         S s = factory.get();
-        String id = String.format("%s:%s-id", workspace == null ? null : workspace.getName(), name);
+        String id = "%s:%s-id".formatted(workspace == null ? null : workspace.getName(), name);
         OwsUtils.set(s, "id", id);
         s.setName(name);
         s.setWorkspace(workspace);
